Fix changes on local test

--- a/src/assets/scss/global/variables.scss
+++ b/src/assets/scss/global/variables.scss
@@ -4,10 +4,10 @@
   --color-secondary: #2f5bc2;
 
   /* Background Colors */
-  --color-bg: #fff;
-  --color-bg-secondary: #f7f7f7;
-  --color-bg-accent: rgb(174, 182, 225);
-  --color-bg-hover: #f3f4f6cc;
+  --color-bg: rgb(209, 223, 234);
+  --color-bg-secondary: rgb(122, 186, 219);
+  --color-bg-accent: rgb(152, 207, 255);
+  --color-bg-hover: rgb(171, 214, 233);
 
   /* Text and Border Colors */
   --color-text: #222;
