--- a/src/_includes/partials/head.njk
+++ b/src/_includes/partials/head.njk
@@ -5,12 +5,6 @@
   <meta name="description" content="{{ metaDescription or renderData.metaDescription or summary or metadata.description }}">
   <link rel="dns-prefetch" href="https://identity.netlify.com">
 
-  {# Canonical URL #}
-  {% if canonical %}
-    <link rel="canonical" href="{{ canonical }}" />
-  {% endif %}
-
-
   {# Third-party scripts #}
   <script async src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 
@@ -22,21 +16,5 @@
   <link rel="stylesheet" href="/assets/css/main.css">
 
   {# Javascript #}
-  <script>
-    // Initialize theme
-    // Must run before page rendering to prevent flash
-    const themeConfig = document.documentElement.dataset;
-    const theme = localStorage.getItem('theme');
-
-    if (theme) {
-      themeConfig.theme = theme;
-    } else {
-      const defaultTheme = themeConfig.defaultTheme;
-      const useSystemTheme = themeConfig.useSystemTheme === 'true';
-      const prefersDark = window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches;
-
-      themeConfig.theme = (useSystemTheme && prefersDark) ? 'dark' : defaultTheme;
-    }
-  </script>
-  <script defer src="/assets/js/main.bundle.js"></script>
+  <script async src="/assets/js/main.bundle.js"></script>
 </head>
